# sqlite_rs

./: '  .gitignore  Makefile.in  Makefile.msc  main.mk  manifest
ext/misc/: uuid.c
ext/recover/: recoverbuild.test
src/: alter.c  bitvec.c  btree.h  btreeInt.h  build.c  complete.c  ctime.c  date.c  expr.c  func.c  global.c  hash.c  hash.h  insert.c  json.c  main.c  pcache.c  pcache.h  rowset.c  select.c  sqliteInt.h  status.c  test2.c  tokenize.c  treeview.c  utf.c  util.c  vdbe.c  vdbe.h  vtab.c  whereInt.h  whereexpr.c
src/rs/: Cargo.toml  build.rs
src/rs/src/: agg.rs  auth.rs  autoinc.rs  build.rs  coll_seq.rs  column.rs  cte.rs  db.rs  errors.rs  expr.rs  fkey.rs  from.rs  func.rs  global.rs  hash.rs  id.rs  index.rs  lib.rs  lookaside.rs  macros.rs  mem.rs  mem2.rs  module.rs  namecontext.rs  pager.rs  parse.rs  record.rs  returning.rs  rowset.rs  savepoint.rs  schema.rs  select.rs  src.rs  table.rs  token.rs  token_type.rs  trigger.rs  upsert.rs  util.rs  vdbe.rs  (+5 more)
src/rs/src/btree/: internal.rs  mod.rs
src/rs/src/date/: mod.rs
src/rs/src/pcache/: mod.rs
src/rs/src/util/: bitmask.rs  bitvec.rs  floats.rs  ints.rs  log_est.rs  mod.rs  strings.rs  varint.rs
test/: bitvec.test  fuzzcheck.c
tool/: mkctimec.tcl  mkkeywordhash.c  mksqlite3c-noext.tcl  mksqlite3c.tcl  mksqlite3internalh.tcl
