[package]
name = "sqlite3_rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sqlite3_rs"
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.3.3"
libc = "0.2.147"
# TODO: move this to test dependencies
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.24.3"
regex = "1.9.1"
